[gd_scene load_steps=45 format=3 uid="uid://ch1xf283nra5l"]

[ext_resource type="Script" path="res://Assets/Objects/Pushable Objects/cauldron_script.gd" id="1_764p2"]
[ext_resource type="Texture2D" uid="uid://c2masumgdqmtw" path="res://Assets/Sprites/cauldron_boiling.png" id="2_a8erl"]
[ext_resource type="Texture2D" uid="uid://cdsmq5wjq3ixn" path="res://Assets/Sprites/cauldron_lit_empty.png" id="3_row0e"]
[ext_resource type="PackedScene" uid="uid://cvht7os1kp5ks" path="res://Interactions/Interaction Area/interaction_area.tscn" id="3_rt3rx"]
[ext_resource type="Texture2D" uid="uid://bo321kaoiwog3" path="res://Assets/Sprites/cauldron_unlit_filling-Sheet.png" id="4_mgbk1"]
[ext_resource type="Texture2D" uid="uid://cj451ejngt5y" path="res://Assets/Sprites/cauldron_untouched.png" id="5_5bkjj"]
[ext_resource type="Script" path="res://Assets/Objects/Environmental Hazards/Wind Current/WindCurrent.gd" id="7_l3s8q"]
[ext_resource type="Texture2D" uid="uid://bdxx05miv3l3d" path="res://Assets/Sprites/Wind Current.png" id="8_pxgbn"]
[ext_resource type="Script" path="res://Interactions/Interaction Area/interaction_area.gd" id="9_6k2cn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nonbq"]
size = Vector2(43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3soww"]
atlas = ExtResource("2_a8erl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmp6r"]
atlas = ExtResource("2_a8erl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t52s0"]
atlas = ExtResource("2_a8erl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgt2q"]
atlas = ExtResource("3_row0e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xce8t"]
atlas = ExtResource("3_row0e")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_41oxl"]
atlas = ExtResource("3_row0e")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f07ml"]
atlas = ExtResource("4_mgbk1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dodgj"]
atlas = ExtResource("4_mgbk1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_brne3"]
atlas = ExtResource("4_mgbk1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shfhf"]
atlas = ExtResource("4_mgbk1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ovta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3soww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmp6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t52s0")
}],
"loop": true,
"name": &"Boiling",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgt2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xce8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41oxl")
}],
"loop": true,
"name": &"Burning",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f07ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dodgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brne3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shfhf")
}],
"loop": false,
"name": &"Filling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_5bkjj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knvea"]
size = Vector2(85, 38.2301)

[sub_resource type="AtlasTexture" id="AtlasTexture_w38uw"]
atlas = ExtResource("8_pxgbn")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb2ku"]
atlas = ExtResource("8_pxgbn")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjnqn"]
atlas = ExtResource("8_pxgbn")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cld14"]
atlas = ExtResource("8_pxgbn")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i818a"]
atlas = ExtResource("8_pxgbn")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhb5u"]
atlas = ExtResource("8_pxgbn")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_px2lt"]
atlas = ExtResource("8_pxgbn")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36t1b"]
atlas = ExtResource("8_pxgbn")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0jlu"]
atlas = ExtResource("8_pxgbn")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slfb8"]
atlas = ExtResource("8_pxgbn")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfmgw"]
atlas = ExtResource("8_pxgbn")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjcke"]
atlas = ExtResource("8_pxgbn")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xt1d"]
atlas = ExtResource("8_pxgbn")
region = Rect2(384, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h7bht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w38uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb2ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjnqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cld14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i818a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhb5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36t1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0jlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slfb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfmgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjcke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xt1d")
}],
"loop": true,
"name": &"Wind Current",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wdfd"]
size = Vector2(35, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_566kt"]
size = Vector2(36, 204.125)

[sub_resource type="Animation" id="Animation_k8qvx"]
resource_name = "Boiling"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DCube:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Boiling"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DCube:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_sns86"]
resource_name = "Burning"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DCube:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Burning"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DCube:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_j7npa"]
resource_name = "Default"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DCube:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DCube:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vb684"]
resource_name = "Filled"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DCube:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Filling"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DCube:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pc8hn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DCube:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7yyk"]
_data = {
"Boiling": SubResource("Animation_k8qvx"),
"Burning": SubResource("Animation_sns86"),
"Default": SubResource("Animation_j7npa"),
"Filled": SubResource("Animation_vb684"),
"RESET": SubResource("Animation_pc8hn")
}

[node name="PushableCauldron" type="RigidBody2D" groups=["PushableObjects"]]
collision_mask = 2
gravity_scale = 0.5
can_sleep = false
lock_rotation = true
continuous_cd = 1
script = ExtResource("1_764p2")

[node name="CollisionShape2DCube" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(0.5, 12.5)
shape = SubResource("RectangleShape2D_nonbq")

[node name="Sprite2DCube" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 0.143791)
scale = Vector2(1.03125, 1.00449)
sprite_frames = SubResource("SpriteFrames_3ovta")
animation = &"Filling"
frame = 1

[node name="Pushing_Interaction_Area" parent="." instance=ExtResource("3_rt3rx")]
position = Vector2(-1, 2)
collision_layer = 1
collision_mask = 1
action_name = "Push or Pull"
interaction_key = "Earth Power"
keyboard_key = "S"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pushing_Interaction_Area"]
light_mask = 3
visibility_layer = 3
position = Vector2(1.5, 11.1151)
shape = SubResource("RectangleShape2D_knvea")

[node name="Fire_Interaction_Area" parent="." instance=ExtResource("3_rt3rx")]
action_name = "Light"
interaction_key = "Fire Power"
keyboard_key = "A"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fire_Interaction_Area"]
light_mask = 3
visibility_layer = 3
position = Vector2(0.5, 13.1151)
shape = SubResource("RectangleShape2D_knvea")

[node name="Water_Interaction_Area" parent="." instance=ExtResource("3_rt3rx")]
action_name = "Fill"
interaction_key = "Water Power"
keyboard_key = "D"

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Water_Interaction_Area"]
light_mask = 3
visibility_layer = 3
position = Vector2(0.5, 13.1151)
shape = SubResource("RectangleShape2D_knvea")

[node name="WindCurrent" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("7_l3s8q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="WindCurrent"]
position = Vector2(0, -39)
sprite_frames = SubResource("SpriteFrames_h7bht")
animation = &"Wind Current"
frame_progress = 0.810868

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindCurrent"]
position = Vector2(0, -39)
shape = SubResource("RectangleShape2D_4wdfd")

[node name="WindInteractionArea" type="Area2D" parent="WindCurrent"]
script = ExtResource("9_6k2cn")
action_name = "Ascend"
interaction_key = "Air Power"
keyboard_key = "W"

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindCurrent/WindInteractionArea"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_566kt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d7yyk")
}

[connection signal="body_entered" from="Pushing_Interaction_Area" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="Pushing_Interaction_Area" to="." method="_on_interaction_area_body_exited"]
[connection signal="body_entered" from="Fire_Interaction_Area" to="." method="_on_fire_interaction_area_body_entered"]
[connection signal="body_exited" from="Fire_Interaction_Area" to="." method="_on_fire_interaction_area_body_exited"]
[connection signal="body_entered" from="Water_Interaction_Area" to="." method="_on_water_interaction_area_body_entered"]
[connection signal="body_exited" from="Water_Interaction_Area" to="." method="_on_water_interaction_area_body_exited"]
[connection signal="body_entered" from="WindCurrent/WindInteractionArea" to="WindCurrent" method="_on_wind_interaction_area_body_entered"]
[connection signal="body_entered" from="WindCurrent/WindInteractionArea" to="WindCurrent/WindInteractionArea" method="_on_body_entered"]
[connection signal="body_exited" from="WindCurrent/WindInteractionArea" to="WindCurrent" method="_on_wind_interaction_area_body_exited"]
[connection signal="body_exited" from="WindCurrent/WindInteractionArea" to="WindCurrent/WindInteractionArea" method="_on_body_exited"]
